revenuecat-2022-12-1/v3.0/Attribution/singular.md
---
title: "Singular"
slug: "singular"
excerpt: "Integrate Purchases SDK with Singular for precise revenue tracking"
hidden: true
createdAt: "2020-07-29T17:30:24.269Z"
updatedAt: "2020-08-31T22:55:34.458Z"
---
With our Singular integration you can:
* Accurately track subscriptions generated from Singular campaigns, allowing you to know precisely how much revenue your campaigns generate.
* Send trial conversions and renewals directly from RevenueCat to Singular, allowing for tracking without an app open.
* Continue to follow your cohorts for months to know the long tail revenue generated by your campaigns.

[block:api-header]
{
  "title": "1. Send device data to RevenueCat"
}
[/block]
The Singular integration requires some device-specific data. RevenueCat will only send events into Singular if the below data has been collected for the device.
[block:parameters]
{
  "data": {
    "h-0": "Key",
    "h-1": "Description",
    "h-2": "Required",
    "0-0": "`$idfa`",
    "1-0": "`$idfv`",
    "2-0": "`$gpsAdId`",
    "3-0": "`$androidId`",
    "0-2": "✅ (iOS only)",
    "1-2": "✅ (iOS only)",
    "2-2": "✅ (Android only)",
    "3-2": "✅ (Android only)",
    "4-2": "❌",
    "4-0": "`$lastSeenIP`",
    "0-1": "iOS [advertising identifier](https://developer.apple.com/documentation/adsupport/asidentifiermanager/1614151-advertisingidentifier) UUID",
    "1-1": "iOS [vender identifier](https://developer.apple.com/documentation/uikit/uidevice/1620059-identifierforvendor) UUID",
    "2-1": "Google [advertising identifier](https://developers.google.com/android/reference/com/google/android/gms/ads/identifier/AdvertisingIdClient.Info)",
    "4-1": "The IP address of the device",
    "3-1": "Android [device identifier](https://developer.android.com/reference/android/provider/Settings.Secure#ANDROID_ID)"
  },
  "cols": 3,
  "rows": 5
}
[/block]
This data should be sent to RevenueCat through reserved [Subscriber Attributes](doc:subscriber-attributes) keys. 
[block:code]
{
  "codes": [
    {
      "code": "import AdSupport\n// ...\nPurchases.configure(withAPIKey: \"public_sdk_key\")\n// ...\nPurchases.shared.setAttributes([\n    \"$idfa\" : ASIdentifierManager.shared().advertisingIdentifier.uuidString,\n    \"$idfv\" : UIDevice.current.identifierForVendor?.uuidString ?? \"\",\n    \"$ip\" : \"true\",\n])",
      "language": "swift",
      "name": "Swift"
    }
  ]
}
[/block]
### (Optional) Send campaign data to RevenueCat
RevenueCat itself is not an attribution network, and can't determine which specific ad drove an install/conversion. However, if you're able to collect this information from another source, such as Singular, it's possible to attach it to a user in RevenueCat using [Subscriber Attributes](doc:subscriber-attributes)  as well.
The below reserved key names can be used to optionally attach campaign data to a user. This data will then be sent through to other downstream analytics integrations and accessible via APIs and webhooks. 
[block:parameters]
{
  "data": {
    "h-0": "Key",
    "0-0": "`$mediaSource`",
    "1-0": "`$campaign`",
    "2-0": "`$adGroup`",
    "3-0": "`$ad`",
    "4-0": "`$keyword`",
    "5-0": "`$creative`"
  },
  "cols": 1,
  "rows": 6
}
[/block]

[block:api-header]
{
  "title": "2. Send RevenueCat events into Singular"
}
[/block]
After you've set up the *Purchase* SDK to send device data to RevenueCat, you can "turn on" the integration and configure the event names from the RevenueCat dashboard.

1. Navigate to your app in the RevenueCat dashboard and choose 'Singular' from the integrations menu.
2. Add your Singular API key, and an optional sandbox API key. The sandbox API key will be used for any sandbox purchases so you don't have to send them to your production Singular instance.
3. Enter the event names that RevenueCat will send or choose the default event names.
4. Select whether you want RevenueCat to report proceeds (after app store cut) or revenue (gross sales).
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/52e09ea-singular.png",
        "singular.png",
        1691,
        2946,
        "#f8f9fa"
      ],
      "caption": "Singular configuration screen"
    }
  ]
}
[/block]

[block:callout]
{
  "type": "danger",
  "body": "Make sure to remove all client-side tracking of revenue. Since RevenueCat will be sending events for all revenue actions, tracking purchases with the Singular SDK directly can lead to double counting of revenue in Singular.",
  "title": "Remove any client-side purchase tracking"
}
[/block]

[block:api-header]
{
  "title": "3. Testing the Singular integration"
}
[/block]
You can test the Singular integration end-to-end before going live. It's recommended that you test the integration is working properly for new users, and any existing users that may update their app to a new version.

### Add a sandbox API key in the RevenueCat dashboard
Before you test the integration, make sure you have a Singular API key set in the "Sandbox API key" field in RevenueCat. This is required if you want the integration to trigger for sandbox purchases.

### Make a sandbox purchase with a new user
Simulate a new user installing your app, and go through your app flow to complete a sandbox purchase.

### Check that the required device data is collected
Navigate the the [Customer View](doc:customers) for the test user that just made a purchase. Make sure that all of the required data from step 1 above is listed as attributes for the user.
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/a74e628-Screen_Shot_2020-07-29_at_5.31.46_PM.png",
        "Screen Shot 2020-07-29 at 5.31.46 PM.png",
        366,
        342,
        "#f7f4f3"
      ]
    }
  ]
}
[/block]
### Check that the Singular event delivered successfully
While still on the Customer View, click into the test purchase event in the [Customer History](doc:customer-history) and make sure that the Singular integration event exists and was delivered successfully. 
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/ed960a5-Screen_Shot_2020-07-29_at_5.35.49_PM.png",
        "Screen Shot 2020-07-29 at 5.35.49 PM.png",
        707,
        232,
        "#f7f0f0"
      ]
    }
  ]
}
[/block]

[block:callout]
{
  "type": "success",
  "title": "You've done it!",
  "body": "You should start seeing events from RevenueCat appear in Singular"
}
[/block]