revenuecat-2022-12-1/v3.1/Attribution/singular.md
---
title: "Singular"
slug: "singular"
excerpt: "Integrate Purchases SDK with Singular for precise revenue tracking"
hidden: false
metadata: 
  title: "Singular – RevenueCat"
  description: "Accurately track subscriptions generated from Singular campaigns, allowing you to know precisely how much revenue your campaigns generate."
  image: 
    0: "https://files.readme.io/39f78f2-OG_image.png"
    1: "OG image.png"
    2: 1200
    3: 627
    4: "#e9acb0"
createdAt: "2020-07-29T17:30:24.269Z"
updatedAt: "2021-06-10T23:55:46.384Z"
---
With our Singular integration you can:
* Accurately track subscriptions generated from Singular campaigns, allowing you to know precisely how much revenue your campaigns generate.
* Send trial conversions and renewals directly from RevenueCat to Singular, allowing for tracking without an app open.
* Continue to follow your cohorts for months to know the long tail revenue generated by your campaigns.

# 1. Send device data to RevenueCat

The Singular integration requires some device-specific data. RevenueCat will only send events into Singular if the below [Subscriber Attributes](doc:subscriber-attributes) keys have been set for the device.
[block:parameters]
{
  "data": {
    "h-0": "Key",
    "h-1": "Description",
    "h-2": "Required",
    "0-0": "`$idfa`",
    "1-0": "`$idfv`",
    "2-0": "`$gpsAdId`",
    "3-0": "`$androidId`",
    "0-2": "✅ (iOS only)",
    "1-2": "✅ (iOS only)",
    "2-2": "✅ (Android only)",
    "3-2": "✅ (Android only)",
    "4-2": "❌ (optional)",
    "4-0": "`$ip`",
    "0-1": "iOS [advertising identifier](https://developer.apple.com/documentation/adsupport/asidentifiermanager/1614151-advertisingidentifier) UUID",
    "1-1": "iOS [vender identifier](https://developer.apple.com/documentation/uikit/uidevice/1620059-identifierforvendor) UUID",
    "2-1": "Google [advertising identifier](https://developers.google.com/android/reference/com/google/android/gms/ads/identifier/AdvertisingIdClient.Info)",
    "4-1": "The IP address of the device",
    "3-1": "Android [device identifier](https://developer.android.com/reference/android/provider/Settings.Secure#ANDROID_ID)"
  },
  "cols": 3,
  "rows": 5
}
[/block]
These properties can be set manually, like any other [Subscriber Attributes](doc:subscriber-attributes), or through the helper method `collectDeviceIdentifiers()`. 
[block:code]
{
  "codes": [
    {
      "code": "import AdSupport\n// ...\nPurchases.configure(withAPIKey: \"public_sdk_key\")\n// ...\nPurchases.shared.collectDeviceIdentifiers()",
      "language": "swift",
      "name": "Swift"
    },
    {
      "code": "//..\nPurchases.configure(this, \"public_sdk_key\")\n//..\nPurchases.sharedInstance.collectDeviceIdentifiers()",
      "language": "kotlin"
    }
  ]
}
[/block]
You should make sure to call `collectDeviceIdentifiers()` after the *Purchases SDK* is configured, and before the first purchase occurs. It's safe to call this multiple times, as only the new/updated values will be sent to RevenueCat.

[block:callout]
{
  "type": "danger",
  "title": "Device identifiers with iOS App Tracking Transparency (iOS 14.5+)",
  "body": "If you are requesting the App Tracking permission through ATT to access the IDFA, you can call `.collectDeviceIdentifiers()` *again* if the customer accepts the permission to update the `$idfa` attribute in RevenueCat."
}
[/block]

[block:callout]
{
  "type": "info",
  "title": "Import AdSupport Framework (iOS)",
  "body": "The AdSupport framework is required to access the IDFA parameter on iOS. Don't forget to import this into your project."
}
[/block]

[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/caf9cda-Screen_Shot_2020-09-14_at_7.09.36_PM.png",
        "Screen Shot 2020-09-14 at 7.09.36 PM.png",
        649,
        155,
        "#2b292b"
      ]
    }
  ]
}
[/block]

[block:callout]
{
  "type": "danger",
  "body": "Make sure to remove all client-side tracking of revenue. Since RevenueCat will be sending events for all revenue actions, tracking purchases with the Singular SDK directly can lead to double counting of revenue in Singular.",
  "title": "Remove any client-side purchase tracking"
}
[/block]
## (Optional) Send campaign data to RevenueCat
RevenueCat itself is not an attribution network, and can't determine which specific ad drove an install/conversion. However, if you're able to collect this information from another source, such as Singular, it's possible to attach it to a user in RevenueCat using [Subscriber Attributes](doc:subscriber-attributes)  as well.
The below reserved key names can be used to optionally attach campaign data to a user. This data will then be sent through to other downstream analytics integrations and accessible via APIs and webhooks.
[block:parameters]
{
  "data": {
    "h-0": "Key",
    "0-0": "`$mediaSource`",
    "1-0": "`$campaign`",
    "2-0": "`$adGroup`",
    "3-0": "`$ad`",
    "4-0": "`$keyword`",
    "5-0": "`$creative`"
  },
  "cols": 1,
  "rows": 6
}
[/block]
# 2. Send RevenueCat events into Singular

After you've set up the *Purchases SDK* to send device data to RevenueCat, you can "turn on" the integration and configure the event names from the RevenueCat dashboard.

1. Navigate to your app in the RevenueCat dashboard and choose 'Singular' from the integrations menu.
2. Add your Singular API key, and an optional sandbox API key. The sandbox API key will be used for any sandbox purchases so you don't have to send them to your production Singular instance.
3. Enter the event names that RevenueCat will send or choose the default event names.
4. Select whether you want RevenueCat to report proceeds (after app store cut) or revenue (gross sales).
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/52e09ea-singular.png",
        "singular.png",
        1691,
        2946,
        "#f8f9fa"
      ],
      "caption": "Singular configuration screen"
    }
  ]
}
[/block]
# 3. Testing the Singular integration

You can test the Singular integration end-to-end before going live. It's recommended that you test the integration is working properly for new users, and any existing users that may update their app to a new version.

## Add a sandbox API key in the RevenueCat dashboard
Before you test the integration, make sure you have a Singular API key set in the "Sandbox API key" field in RevenueCat. This is required if you want the integration to trigger for sandbox purchases.

## Make a sandbox purchase with a new user
Simulate a new user installing your app, and go through your app flow to complete a sandbox purchase.

## Check that the required device data is collected
Navigate the the [Customer View](doc:customers) for the test user that just made a purchase. Make sure that all of the required data from step 1 above is listed as attributes for the user.
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/a74e628-Screen_Shot_2020-07-29_at_5.31.46_PM.png",
        "Screen Shot 2020-07-29 at 5.31.46 PM.png",
        366,
        342,
        "#f7f4f3"
      ]
    }
  ]
}
[/block]
## Check that the Singular event delivered successfully
While still on the Customer View, click into the test purchase event in the [Customer History](doc:customer-history) and make sure that the Singular integration event exists and was delivered successfully. 
[block:image]
{
  "images": [
    {
      "image": [
        "https://files.readme.io/ed960a5-Screen_Shot_2020-07-29_at_5.35.49_PM.png",
        "Screen Shot 2020-07-29 at 5.35.49 PM.png",
        707,
        232,
        "#f7f0f0"
      ]
    }
  ]
}
[/block]

[block:callout]
{
  "type": "success",
  "title": "You've done it!",
  "body": "You should start seeing events from RevenueCat appear in Singular"
}
[/block]